Corrección de path de foto de materiales